<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/go_forward"
            android:enabled="true"
            android:icon="@drawable/ic_arrow_forward_black_24dp"
            android:title="@string/go_forward"
            app:showAsAction="withText">
            /* Refresh button */
        </item>

        <item
            android:id="@+id/var"
            android:icon="@drawable/ic_refresh_black_24dp"
            android:title="@string/var"
            android:titleCondensed="@string/var">

        </item>

    </group>

    <item
        android:id="@+id/new_tab"
        android:title="@string/new_tab">

    </item>
    <item
        android:id="@+id/data_saver"
        android:title="@string/data_saver">

    </item>
    /*
    Extended Menu

    */

    <item
        android:id="@+id/user_agent"
        android:title="@string/user_agent">

        <menu>
            <item
                android:id="@+id/desktop_site"
                android:checkable="true"
                android:title="@string/desktop_site" />
            <item
                android:id="@+id/android"
                android:checkable="true"
                android:checked="false"
                android:title="@string/android" />

        </menu>
    </item>
    <item

        android:id="@+id/exit"
        android:icon="@drawable/ic_on_off"
        android:title="@string/exit" />
</menu>